--- a/Marvel.html
+++ b/Marvel.html
@@ -9,6 +9,11 @@
       name="title"
       content="Marvel.com | The Official Site for Marvel Movies, Characters, Comics, TV"
     />
+    <link rel="stylesheet" href="assets/styles/all.css" />
+    <link rel="stylesheet" href="assets/styles/brands.css" />
+    <link rel="stylesheet" href="assets/styles/fontawesome.css" />
+    <link rel="stylesheet" href="assets/styles/regular.css" />
+    <link rel="stylesheet" href="assets/styles/solid.css" />
     <link rel="stylesheet" href="assets/styles/fonts.css" />
     <link rel="stylesheet" href="assets/styles/general.css" />
     <link rel="stylesheet" href="assets/styles/main.css" />
