correcting homepage css name

--- a/Marvel-homepage.html
+++ b/Marvel-homepage.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="assets/styles/solid.css" />
     <link rel="stylesheet" href="assets/styles/fonts.css" />
     <link rel="stylesheet" href="assets/styles/general.css" />
-    <link rel="stylesheet" href="assets/styles/main.css" />
+    <link rel="stylesheet" href="assets/styles/main-homepage.css" />
   </head>
   <body>
     <div class="header">
