add photos and new codes

--- a/marvel-moviepage.html
+++ b/marvel-moviepage.html
@@ -124,51 +124,153 @@
       </div>
     </div>
     <div class="hero relative">
-      <div class="dark">
-        <div class="container">
-          <div class="hero-content">
-            <ul class="flex-y align-start justify-center p-x-25">
-              <li class="col-6 m-0">
-                <img src="assets/photos/whatif-log_eye-900x500_copy.png" />
-              </li>
-              <li class="col-6">
-                <h1 class="uppercase m-y-15">watch the trailer</h1>
-              </li>
-              <li class="col-6">
-                <p class="">
-                  Things have gotten a little twisted in the Multiverse… All new
-                  episodes of Marvel Studios’ #WhatIf are coming to Disney+ on
-                  December 22.
-                </p>
-              </li>
-              <li>
-                <p class="btn btn-red m-t-20 m-b-60">
-                  <a href="#">Watch now</a>
-                </p>
-              </li>
-            </ul>
+      <div class="container">
+        <div class="hero-content">
+          <ul class="flex-y align-start justify-center p-x-25">
+            <li class="col-6 m-0">
+              <img
+                class="img-container"
+                src="assets/photos/movie-page/logo-bg.png"
+              />
+            </li>
+            <li>
+              <p class="btn btn-red m-t-20 m-b-60">
+                <a class="uppercase" href="#">Get Tickets</a>
+              </p>
+            </li>
+          </ul>
+        </div>
+        <div class="social-media flex-x gap-15 justify-end relative z-3">
+          <div class="facebook">
+            <a href="#">
+              <i class="fa-brands fa-square-facebook"> </i>
+            </a>
           </div>
-          <div class="social-media flex-x gap-15 justify-end relative z-3">
-            <div class="facebook">
-              <a href="#">
-                <i class="fa-brands fa-square-facebook"> </i>
-              </a>
-            </div>
-            <div class="twitter">
-              <a href="#">
-                <i class="fa-brands fa-x-twitter"></i>
-              </a>
-            </div>
-            <div class="insta">
-              <a href="#">
-                <i class="fa-brands fa-instagram"></i>
-              </a>
-            </div>
+          <div class="twitter">
+            <a href="#">
+              <i class="fa-brands fa-x-twitter"></i>
+            </a>
+          </div>
+          <div class="insta">
+            <a href="#">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
           </div>
         </div>
       </div>
     </div>
-    <div class="footer">
+    <div class="final-trailer m-y-35">
+      <div class="container">
+        <p class="m-y-35 skew-brow">FINAL TRAILER</p>
+        <div class="trailer-bg relative">
+          <ul class="top-list flex-x align-center space-between p-20">
+            <li class="flex-x gap-20 align-center">
+              <a href="#">
+                <img
+                  class="icon-logo border-circle"
+                  src="assets/photos/movie-page/ugAmG9LeliJJoiyacIecdiq_ZgRNdmjCIohaN5x3QEOmWB9dNUsKuCU8ngLs3JUauHZ4-boVkA=s68-c-k-c0x00ffffff-no-rj.jpeg"
+              /></a>
+              <p>
+                <a href="#">
+                  The Marvels | Final Trailer | In Theaters Friday</a
+                >
+              </p>
+            </li>
+            <li class="flex-x gap-20">
+              <div class="watch-icon flex-y align-center gap-10">
+                <!-- <div class="icon"> -->
+                <a href="#" class="fa-solid fa-clock icon"></a>
+                <!-- </div> -->
+                <div class="text">
+                  <a href="#"> Watch later</a>
+                </div>
+              </div>
+              <div class="share-icon flex-y align-center gap-10">
+                <a href="#" class="fa-solid fa-share icon"></a>
+                <div class="text">
+                  <a href="#"> Share</a>
+                </div>
+              </div>
+            </li>
+          </ul>
+          <div class="youtube-icon">
+            <a href="#" class="fa-brands fa-youtube"></a>
+          </div>
+          <ul class="bottom-list flex-x gap-15">
+            <li>
+              <a href="#">Watch on</a>
+            </li>
+            <li>
+              <a href="#" class="fa-brands fa-youtube vertical-middle"></a>
+              <a href="#">youtube</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="latest-news p-y-1050">
+      <div class="container">
+        <p class="m-y-35 skew-brow c-f p">LATEST NEWS</p>
+        <ul class="flex-x align-center gap-10">
+          <li class="col-3">
+            <div class="img-wrapper">
+              <a href="#"> <img src="assets/photos/movie-page/1.png" /></a>
+            </div>
+            <div class="content">
+              <span class="c-g m-t-10 i-b">MOVIES</span>
+              <div class="c-f m-t-10">
+                <a href="#">
+                  ‘The Marvels’: Kamala Khan’s Family Goes to Space</a
+                >
+              </div>
+            </div>
+          </li>
+          <li class="col-3">
+            <div class="img-wrapper">
+              <a href="#"> <img src="assets/photos/movie-page/2.jpg" /></a>
+            </div>
+            <div class="content">
+              <span class="c-g m-t-10 i-b">MOVIES</span>
+              <div class="c-f m-t-10">
+                <a href="#">
+                  ‘The Marvels’: Kamala Khan’s Family Goes to Space</a
+                >
+              </div>
+            </div>
+          </li>
+          <li class="col-3">
+            <div class="img-wrapper">
+              <a href="#"> <img src="assets/photos/movie-page/3.png" /></a>
+            </div>
+            <div class="content">
+              <span class="c-g m-t-10 i-b">MOVIES</span>
+              <div class="c-f m-t-10">
+                <a href="#">
+                  ‘The Marvels’: Kamala Khan’s Family Goes to Space</a
+                >
+              </div>
+            </div>
+          </li>
+          <li class="col-3">
+            <div class="img-wrapper">
+              <a href="#"> <img src="assets/photos/movie-page/4.png" /></a>
+            </div>
+            <div class="content">
+              <span class="c-g m-t-10 i-b">MOVIES</span>
+              <div class="c-f m-t-10">
+                <a href="#">
+                  ‘The Marvels’: Kamala Khan’s Family Goes to Space</a
+                >
+              </div>
+            </div>
+          </li>
+        </ul>
+        <div class="btn btn-black c-f m-t-40">load more</div>
+      </div>
+    </div>
+    <div class="overview"></div>
+
+    <!-- <div class="footer">
       <div class="top-section">
         <div class="container flex-x align-center justify-center gap-60">
           <div class="footer-bg col-6">
@@ -305,6 +407,6 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
