add final trailer,latest news, overview andgallery section

--- a/marvel-moviepage.html
+++ b/marvel-moviepage.html
@@ -268,8 +268,102 @@
         <div class="btn btn-black c-f m-t-40">load more</div>
       </div>
     </div>
-    <div class="overview"></div>
-
+    <div class="overview relative">
+      <div class="logo-back center-text relative z-3"></div>
+    </div>
+    <div class="container">
+      <div class="overview-content p-100">
+        <p class="skew-brow m-b-60">OVERVIEW</p>
+        <div class="description flex-x gap-30 align-start">
+          <div class="text flex-y align-center gap-30 col-8">
+            <p class="m-b-40">
+              Carol Danvers AKA Captain Marvel has reclaimed her identity from
+              the tyrannical Kree and taken revenge on the Supreme Intelligence.
+              But unintended consequences see Carol shouldering the burden of a
+              destabilized universe. When her duties send her to an anomalous
+              wormhole linked to a Kree revolutionary, her powers become
+              entangled with that of Jersey City super-fan Kamala Khan, aka Ms.
+              Marvel, and Carol’s estranged niece, now S.A.B.E.R. astronaut
+              Captain Monica Rambeau.
+            </p>
+            <ul class="text-list flex-x gap-15 align-start">
+              <li class="col-4">
+                <p>DIRECTOR</p>
+                <p><b>Nia DaCosta </b></p>
+              </li>
+              <li class="col-4">
+                <p>PRODUCER</p>
+                <p><b>Kevin Feige </b></p>
+              </li>
+              <li class="col-4">
+                <p>EXECUTIVE PRODUCERS</p>
+                <p>
+                  <b
+                    >Louis D’Esposito, Victoria Alonso, Mary Livanos and Matthew
+                    Jenkins
+                  </b>
+                </p>
+              </li>
+            </ul>
+            <ul class="flex-x gap-15 align-start">
+              <li class="col-4">
+                <p>WRITERS</p>
+                <p>
+                  <b
+                    >Megan McDonnell, Nia DaCosta, Elissa Karasik and Zeb
+                    Wells</b
+                  >
+                </p>
+              </li>
+              <li class="col-4">
+                <p>CAST</p>
+                <p>
+                  <b
+                    >Brie Larson, Teyonah Parris, Iman Vellani, Zawe Ashton,
+                    Gary Lewis, Seo-Jun Park, Zenobia Shroff, Mohan Kapur,
+                    Saagar Shaikh, and Samuel L. Jackson
+                  </b>
+                </p>
+              </li>
+              <li class="col-4">
+                <p>RELEASE DATE</p>
+                <p>
+                  <b>November 10, 2023 </b>
+                </p>
+              </li>
+            </ul>
+          </div>
+          <div class="poster col-4">
+            <div class="poster-wrapper">
+              <img src="assets/photos/movie-page/poster.jpeg" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="photo-gallery">
+      <div class="container">
+        <p class="skew-brow m-b-60 uppercase">Gallery</p>
+        <ul>
+          <li><img src="assets/photos/movie-page/5.jpg" /></li>
+          <li><img src="assets/photos/movie-page/6.jpg" /></li>
+          <li><img src="assets/photos/movie-page/7.jpg" /></li>
+          <li><img src="assets/photos/movie-page/8.jpg" /></li>
+          <li><img src="assets/photos/movie-page/9.jpg" /></li>
+          <li><img src="assets/photos/movie-page/10.jpg" /></li>
+          <li><img src="assets/photos/movie-page/12.jpg" /></li>
+          <li><img src="assets/photos/movie-page/13.jpeg" /></li>
+          <li><img src="assets/photos/movie-page/14.jpeg" /></li>
+          <li><img src="assets/photos/movie-page/15.jpeg" /></li>
+          <li><img src="assets/photos/movie-page/16.jpeg" /></li>
+          <li><img src="assets/photos/movie-page/17.jpeg" /></li>
+          <li><img src="assets/photos/movie-page/18.jpg" /></li>
+          <li><img src="assets/photos/movie-page/19.jpg" /></li>
+          <li><img src="assets/photos/movie-page/20.jpg" /></li>
+          <li><img src="assets/photos/movie-page/21.jpg" /></li>
+        </ul>
+      </div>
+    </div>
     <!-- <div class="footer">
       <div class="top-section">
         <div class="container flex-x align-center justify-center gap-60">
