add files and character section code

--- a/marvel-moviepage.html
+++ b/marvel-moviepage.html
@@ -341,7 +341,7 @@
         </div>
       </div>
     </div>
-    <div class="photo-gallery">
+    <div class="photo-gallery m-b-40">
       <div class="container">
         <p class="skew-brow m-b-60 uppercase">Gallery</p>
         <ul>
@@ -362,8 +362,95 @@
           <li><img src="assets/photos/movie-page/20.jpg" /></li>
           <li><img src="assets/photos/movie-page/21.jpg" /></li>
         </ul>
+        <div class="btn btn-transparent uppercase m-t-20">Load More</div>
       </div>
     </div>
+    <div class="characters m-y-35">
+      <div class="container">
+        <div class="skew-brow updates m-y-35">CHARACTERS</div>
+        <ul class="flex-x gap-15">
+          <li class="col-6 c-f">
+            <div class="hover-box relative">
+              <div class="img-wrapper">
+                <img
+                  class="z-3 relative"
+                  src="assets/photos/movie-page/c1.jpeg"
+                />
+              </div>
+              <div class="text p-10">
+                <p>Captain marvel</p>
+              </div>
+            </div>
+          </li>
+          <li class="col-6 c-f">
+            <div class="hover-box relative">
+              <div class="img-wrapper">
+                <img
+                  class="z-3 relative"
+                  src="assets/photos/movie-page/c2.jpeg"
+                />
+              </div>
+              <div class="text p-10">
+                <p>Captain marvel</p>
+              </div>
+            </div>
+          </li>
+          <li class="col-6 c-f">
+            <div class="hover-box relative">
+              <div class="img-wrapper">
+                <img
+                  class="z-3 relative"
+                  src="assets/photos/movie-page/c3.jpeg"
+                />
+              </div>
+              <div class="text p-10">
+                <p>Captain marvel</p>
+              </div>
+            </div>
+          </li>
+          <li class="col-6 c-f">
+            <div class="hover-box relative">
+              <div class="img-wrapper">
+                <img
+                  class="z-3 relative"
+                  src="assets/photos/movie-page/c4.jpeg"
+                />
+              </div>
+              <div class="text p-10">
+                <p>Captain marvel</p>
+              </div>
+            </div>
+          </li>
+          <li class="col-6 c-f">
+            <div class="hover-box relative">
+              <div class="img-wrapper">
+                <img
+                  class="z-3 relative"
+                  src="assets/photos/movie-page/c5.jpeg"
+                />
+              </div>
+              <div class="text p-10">
+                <p>Captain marvel</p>
+              </div>
+            </div>
+          </li>
+          <li class="col-6 c-f">
+            <div class="hover-box relative">
+              <div class="img-wrapper">
+                <img
+                  class="z-3 relative"
+                  src="assets/photos/movie-page/c6.jpeg"
+                />
+              </div>
+              <div class="text p-10">
+                <p>Captain marvel</p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+
     <!-- <div class="footer">
       <div class="top-section">
         <div class="container flex-x align-center justify-center gap-60">
