--- a/marvel-internalpage.html
+++ b/marvel-internalpage.html
@@ -268,10 +268,10 @@
         <div class="btn btn-black c-f m-t-40">load more</div>
       </div>
     </div>
-    <div class="overview relative">
+    <div class="overview-background relative">
       <div class="logo-back center-text relative z-3"></div>
     </div>
-    <div class="container">
+    <div class="overview-text-box container">
       <div class="overview-content p-100">
         <p class="skew-brow m-b-60">OVERVIEW</p>
         <div class="description flex-x gap-30 align-start">
@@ -365,7 +365,7 @@
         <div class="btn btn-transparent uppercase m-t-20">Load More</div>
       </div>
     </div>
-    <div class="characters m-y-35">
+    <div class="characters m-y-50">
       <div class="container">
         <div class="skew-brow updates m-y-35">CHARACTERS</div>
         <ul class="flex-x gap-15">
@@ -450,8 +450,146 @@
         </ul>
       </div>
     </div>
-
-    <!-- <div class="footer">
+    <div class="official-trailer m-t-100">
+      <div class="container">
+        <p class="m-y-35 skew-brow">FINAL TRAILER</p>
+        <div class="trailer-bg relative">
+          <ul class="top-list flex-x align-center space-between p-20">
+            <li class="flex-x gap-20 align-center">
+              <a href="#">
+                <img
+                  class="icon-logo border-circle"
+                  src="assets/photos/movie-page/ugAmG9LeliJJoiyacIecdiq_ZgRNdmjCIohaN5x3QEOmWB9dNUsKuCU8ngLs3JUauHZ4-boVkA=s68-c-k-c0x00ffffff-no-rj.jpeg"
+              /></a>
+              <p>
+                <a href="#">
+                  The Marvels | Final Trailer | In Theaters Friday</a
+                >
+              </p>
+            </li>
+            <li class="flex-x gap-20">
+              <div class="watch-icon flex-y align-center gap-10">
+                <!-- <div class="icon"> -->
+                <a href="#" class="fa-solid fa-clock icon"></a>
+                <!-- </div> -->
+                <div class="text">
+                  <a href="#"> Watch later</a>
+                </div>
+              </div>
+              <div class="share-icon flex-y align-center gap-10">
+                <a href="#" class="fa-solid fa-share icon"></a>
+                <div class="text">
+                  <a href="#"> Share</a>
+                </div>
+              </div>
+            </li>
+          </ul>
+          <div class="youtube-icon">
+            <a href="#" class="fa-brands fa-youtube"></a>
+          </div>
+          <ul class="bottom-list flex-x gap-15">
+            <li>
+              <a href="#">Watch on</a>
+            </li>
+            <li>
+              <a href="#" class="fa-brands fa-youtube vertical-middle"></a>
+              <a href="#">youtube</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="posters m-t-100">
+      <div class="container">
+        <p class="skew-brow m-b-60 uppercase">posters</p>
+        <ul>
+          <li><img src="assets/photos/movie-page/p1.jpeg" /></li>
+          <li><img src="assets/photos/movie-page/p2.jpeg" /></li>
+          <li><img src="assets/photos/movie-page/p3.jpeg" /></li>
+          <li><img src="assets/photos/movie-page/p4.jpeg" /></li>
+          <li><img src="assets/photos/movie-page/p5.jpeg" /></li>
+          <li><img src="assets/photos/movie-page/p6.jpeg" /></li>
+        </ul>
+      </div>
+    </div>
+    <div class="teaser-trailer m-t-100">
+      <div class="container">
+        <p class="m-y-35 skew-brow">TEASER TRAILER</p>
+        <div class="trailer-bg relative">
+          <ul class="top-list flex-x align-center space-between p-20">
+            <li class="flex-x gap-20 align-center">
+              <a href="#">
+                <img
+                  class="icon-logo border-circle"
+                  src="assets/photos/movie-page/ugAmG9LeliJJoiyacIecdiq_ZgRNdmjCIohaN5x3QEOmWB9dNUsKuCU8ngLs3JUauHZ4-boVkA=s68-c-k-c0x00ffffff-no-rj.jpeg"
+              /></a>
+              <p>
+                <a href="#">
+                  The Marvels | Final Trailer | In Theaters Friday</a
+                >
+              </p>
+            </li>
+            <li class="flex-x gap-20">
+              <div class="watch-icon flex-y align-center gap-10">
+                <!-- <div class="icon"> -->
+                <a href="#" class="fa-solid fa-clock icon"></a>
+                <!-- </div> -->
+                <div class="text">
+                  <a href="#"> Watch later</a>
+                </div>
+              </div>
+              <div class="share-icon flex-y align-center gap-10">
+                <a href="#" class="fa-solid fa-share icon"></a>
+                <div class="text">
+                  <a href="#"> Share</a>
+                </div>
+              </div>
+            </li>
+          </ul>
+          <div class="youtube-icon">
+            <a href="#" class="fa-brands fa-youtube"></a>
+          </div>
+          <ul class="bottom-list flex-x gap-15">
+            <li>
+              <a href="#">Watch on</a>
+            </li>
+            <li>
+              <a href="#" class="fa-brands fa-youtube vertical-middle"></a>
+              <a href="#">youtube</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="related-movie m-t-80 m-b-30">
+      <div class="container">
+        <p class="skew-brow m-b-30">RELATED MOVIE</p>
+        <ul class="flex-x align-start gap-100">
+          <li class="col-4">
+            <div class="img-wrapper">
+              <img src="assets/photos/movie-page/rm.jpeg" />
+            </div>
+          </li>
+          <li class="col-8">
+            <div class="content col-8">
+              <h2 class="m-b-10">Captain Marvel</h2>
+              <span class="m-b-10 i-b">2019</span>
+              <p class="m-b-20">
+                Set in the 1990s, Marvel Studios' "Captain Marvel" is an all-new
+                adventure from a previously unseen period in the history of the
+                Marvel Cinematic Universe that follows the journey of Carol
+                Danvers as she becomes one of the universe's most powerful
+                heroes. While a galactic war between two alien races reaches
+                Earth, Danvers finds herself and a small cadre of allies at the
+                center of the maelstrom.
+              </p>
+            </div>
+            <div class="btn btn-transparent">Captain Marvel</div>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer">
       <div class="top-section">
         <div class="container flex-x align-center justify-center gap-60">
           <div class="footer-bg col-6">
@@ -588,6 +726,6 @@
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
   </body>
 </html>
