new codes for herosection

--- a/marvel-moviepage.html
+++ b/marvel-moviepage.html
@@ -124,43 +124,10 @@
         </div>
       </div>
     </div>
-    <div class="hero relative">
-      <div class="container">
-        <div class="hero-content">
-          <ul class="flex-y align-start justify-center p-x-25">
-            <li class="col-6 m-0">
-              <img
-                class="img-container"
-                src="assets/photos/movie-page/logo-bg.png"
-              />
-            </li>
-            <li>
-              <p class="btn btn-red m-t-20 m-b-60">
-                <a class="uppercase" href="#">Get Tickets</a>
-              </p>
-            </li>
-          </ul>
-        </div>
-        <div class="social-media flex-x gap-15 justify-end relative z-3">
-          <div class="facebook">
-            <a href="#">
-              <i class="fa-brands fa-square-facebook"> </i>
-            </a>
-          </div>
-          <div class="twitter">
-            <a href="#">
-              <i class="fa-brands fa-x-twitter"></i>
-            </a>
-          </div>
-          <div class="insta">
-            <a href="#">
-              <i class="fa-brands fa-instagram"></i>
-            </a>
-          </div>
-        </div>
-      </div>
+    <div class="hero-section">
+      <div class="dark"></div>
     </div>
-    <div class="footer">
+    <!-- <div class="footer">
       <div class="top-section">
         <div class="container flex-x align-center justify-center gap-60">
           <div class="footer-bg col-6">
@@ -297,6 +264,6 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
