--- a/marvel-internalpage.html
+++ b/marvel-internalpage.html
@@ -594,7 +594,7 @@
         <div class="container flex-x align-center justify-center gap-60">
           <div class="footer-bg col-6">
             <div class="img-wrapper">
-              <img src="assets/photos/footer-bg.jpg" />
+              <img src="assets/photos/movie-page/footer-bg.jpg" />
             </div>
           </div>
           <div class="footer-text col-6 center-text">
@@ -648,7 +648,9 @@
             <li class="flex-y gap-30 col-4">
               <div class="insider flex-x gap-30">
                 <div class="logo-wrapper">
-                  <a href="#"> <img src="assets/photos/logo-1.png" /></a>
+                  <a href="#">
+                    <img src="assets/photos/movie-page/logo-1.png"
+                  /></a>
                 </div>
                 <div class="text-wrapper">
                   <a href="#">
@@ -660,7 +662,7 @@
               <div class="marvel flex-x gap-30">
                 <div class="logo-wrapper">
                   <a href="#">
-                    <img src="assets/photos/logo-3.png" />
+                    <img src="assets/photos/movie-page/logo-3.png" />
                   </a>
                 </div>
                 <div class="text-wrapper">
