--- a/marvel-searchpage.html
+++ b/marvel-searchpage.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="assets/styles/main-homepage.css" />
     <link rel="stylesheet" href="assets/styles/main-internalpage.css" />
     <link rel="stylesheet" href="assets/styles/main-moviepage.css" />
+    <link rel="stylesheet" href="assets/styles/main-searchpage.css" />
   </head>
   <body>
     <div class="header">
@@ -112,30 +113,230 @@
         </ul>
       </div>
     </div>
-    <div class="ad-nav">
+
+    <div class="search-hero">
       <div class="container">
-        <div class="wrapper flex-x justify-center align-center gap-10">
-          <p>STREAM LOKI SEASON 2 EXCLUSIVELY ON</p>
-          <div class="img-container">
-            <img
-              src="https://cdn.marvel.com/content/1x/disneybtn_asset2x_6.png"
-            />
+        <div class="banner center-text">
+          <img src="assets/photos/search-page/banner.png" />
+          <p class="uppercase m-t-10">advertisement</p>
+        </div>
+      </div>
+    </div>
+    <div class="search-input p-x-25 m-t-40">
+      <div class="input-wrapper relative">
+        <button class="fa-solid fa-magnifying-glass"></button>
+        <input type="search" placeholder="search" class="p-10" />
+      </div>
+      <ul class="flex-x gap-20 m-t-10">
+        <li class="uppercase"><a href="#"></a>all</li>
+        <li class="uppercase"><a href="#"></a>characters</li>
+        <li class="uppercase"><a href="#"></a>groups</li>
+        <li class="uppercase"><a href="#"></a>comics</li>
+        <li class="uppercase"><a href="#"></a>videos</li>
+        <li class="uppercase"><a href="#"></a>article</li>
+        <li class="uppercase"><a href="#"></a>movies</li>
+        <li class="uppercase"><a href="#"></a>tv</li>
+        <li class="uppercase"><a href="#"></a>games</li>
+      </ul>
+    </div>
+    <div class="search-box">
+      <div class="container flex-x">
+        <div class="white-space col-9"></div>
+        <div class="hype-box col-3 m-t-60 relative">
+          <div class="icon-top">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="186"
+              height="55"
+              viewBox="0 0 186 55"
+            >
+              <path
+                d="M21.4 1L1 21.4V717h264.6l20.4-20.4V1H21.4z"
+                mask="url(#border-line_svg__mask-2)"
+              ></path>
+            </svg>
+          </div>
+          <div class="title center-text m-b-10">
+            <h2 class="m-b-10">THE HYPE BOX</h2>
+            <p>Can’t-miss news and updates from across the Marvel Universe!</p>
+          </div>
+          <div class="mini-list relative">
+            <ul class="flex-y align-center">
+              <li class="flex-x gap-30">
+                <div class="img-wrapper col-6">
+                  <img
+                    class="pointer"
+                    src="assets/photos/home-page/pink.jpeg"
+                  />
+                </div>
+                <div class="text-wrapper col-6 m-b-10">
+                  <span class="i-b m-b-5">COMICS</span>
+                  <p>December 13's New Marvel Comics: The Full List</p>
+                </div>
+              </li>
+              <li class="flex-x gap-30">
+                <div class="img-wrapper col-6">
+                  <img
+                    class="pointer"
+                    src="assets/photos/home-page/blade.jpeg"
+                  />
+                </div>
+                <div class="text-wrapper col-6 m-b-10">
+                  <span class="i-b m-b-5">COMICS</span>
+                  <p>December 13's New Marvel Comics: The Full List</p>
+                </div>
+              </li>
+              <li class="flex-x gap-30">
+                <div class="img-wrapper col-6">
+                  <img
+                    class="pointer"
+                    src="assets/photos/home-page/christmas_0.png"
+                  />
+                </div>
+                <div class="text-wrapper col-6 m-b-10">
+                  <span class="i-b m-b-5">COMICS</span>
+                  <p>December 13's New Marvel Comics: The Full List</p>
+                </div>
+              </li>
+              <li class="flex-x gap-30">
+                <div class="img-wrapper col-6">
+                  <img class="pointer" src="assets/photos/home-page/girl.png" />
+                </div>
+                <div class="text-wrapper col-6 m-b-10">
+                  <span class="i-b m-b-5">COMICS</span>
+                  <p>December 13's New Marvel Comics: The Full List</p>
+                </div>
+              </li>
+              <li class="flex-x gap-30">
+                <div class="img-wrapper col-6">
+                  <img
+                    class="pointer"
+                    src="assets/photos/home-page/snap.jpeg"
+                  />
+                </div>
+                <div class="text-wrapper col-6 m-b-10">
+                  <span class="i-b m-b-5">COMICS</span>
+                  <p>December 13's New Marvel Comics: The Full List</p>
+                </div>
+              </li>
+            </ul>
+            <div class="icon-bottom">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="186"
+                height="55"
+                viewBox="0 0 186 55"
+              >
+                <path
+                  d="M21.4 1L1 21.4V717h264.6l20.4-20.4V1H21.4z"
+                  mask="url(#border-line_svg__mask-2)"
+                ></path>
+              </svg>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="hero-section relative c-f">
-      <div class="container-full dark">
-        <div class="hero-content center-text">
-          <h1 class="m-0">MOVIES</h1>
-          <p>
-            Journey into the cosmic depths of the mighty Marvel Cinematic
-            Universe!
-          </p>
+    <div class="latest-videos">
+      <div class="container">
+        <h2 class="skew-brow uppercase m-y-35">latest videos</h2>
+        <ul class="flex-x align-center gap-10 m-b-40">
+          <li class="col-3">
+            <div class="img-wrapper relative">
+              <a href="#"> <img src="assets/photos/search-page/lv1.jpeg" /></a>
+              <div class="play-icon">
+                <a href="#">
+                  <i class="fa-solid fa-play"></i>
+                </a>
+              </div>
+            </div>
+            <div class="content">
+              <span class="c-g m-t-10 i-b">MOVIES</span>
+              <div class="c-0 m-t-10">
+                <a href="#">
+                  ‘The Marvels’: Kamala Khan’s Family Goes to Space</a
+                >
+              </div>
+            </div>
+          </li>
+          <li class="col-3">
+            <div class="img-wrapper relative">
+              <a href="#"> <img src="assets/photos/search-page/lv2.jpeg" /></a>
+              <div class="play-icon">
+                <a href="#">
+                  <i class="fa-solid fa-play"></i>
+                </a>
+              </div>
+            </div>
+            <div class="content">
+              <span class="c-g m-t-10 i-b">MOVIES</span>
+              <div class="c-0 m-t-10">
+                <a href="#">
+                  ‘The Marvels’: Kamala Khan’s Family Goes to Space</a
+                >
+              </div>
+            </div>
+          </li>
+          <li class="col-3">
+            <div class="img-wrapper relative">
+              <a href="#"> <img src="assets/photos/search-page/lv3.jpeg" /></a>
+              <div class="play-icon">
+                <a href="#">
+                  <i class="fa-solid fa-play"></i>
+                </a>
+              </div>
+            </div>
+            <div class="content">
+              <span class="c-g m-t-10 i-b">MOVIES</span>
+              <div class="c-0 m-t-10">
+                <a href="#">
+                  ‘The Marvels’: Kamala Khan’s Family Goes to Space</a
+                >
+              </div>
+            </div>
+          </li>
+          <li class="col-3">
+            <div class="img-wrapper relative">
+              <a href="#"> <img src="assets/photos/search-page/lv4.jpeg" /></a>
+              <div class="play-icon">
+                <a href="#">
+                  <i class="fa-solid fa-play"></i>
+                </a>
+              </div>
+            </div>
+            <div class="content">
+              <span class="c-g m-t-10 i-b">MOVIES</span>
+              <div class="c-0 m-t-10">
+                <a href="#">
+                  ‘The Marvels’: Kamala Khan’s Family Goes to Space</a
+                >
+              </div>
+            </div>
+          </li>
+        </ul>
+        <div class="carousels relative">
+          <ul class="flex-x gap-5 justify-center absolute">
+            <li class="col-5">
+              <a href="#"></a>
+            </li>
+            <li class="col-5">
+              <a href="#"></a>
+            </li>
+            <li class="col-5">
+              <a href="#"></a>
+            </li>
+            <li class="col-5">
+              <a href="#"></a>
+            </li>
+            <li class="col-5">
+              <a href="#"></a>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
-    <div class="footer m-t-40">
+
+    <div class="footer m-t-80">
       <div class="top-section">
         <div class="container flex-x align-center justify-center gap-60">
           <div class="footer-bg col-6">
