changing footer background

--- a/marvel-searchpage.html
+++ b/marvel-searchpage.html
@@ -128,15 +128,15 @@
         <input type="search" placeholder="search" class="p-10" />
       </div>
       <ul class="flex-x gap-20 m-t-10">
-        <li class="uppercase"><a href="#"></a>all</li>
-        <li class="uppercase"><a href="#"></a>characters</li>
-        <li class="uppercase"><a href="#"></a>groups</li>
-        <li class="uppercase"><a href="#"></a>comics</li>
-        <li class="uppercase"><a href="#"></a>videos</li>
-        <li class="uppercase"><a href="#"></a>article</li>
-        <li class="uppercase"><a href="#"></a>movies</li>
-        <li class="uppercase"><a href="#"></a>tv</li>
-        <li class="uppercase"><a href="#"></a>games</li>
+        <li class="uppercase pointer"><a href="#"></a>all</li>
+        <li class="uppercase pointer"><a href="#"></a>characters</li>
+        <li class="uppercase pointer"><a href="#"></a>groups</li>
+        <li class="uppercase pointer"><a href="#"></a>comics</li>
+        <li class="uppercase pointer"><a href="#"></a>videos</li>
+        <li class="uppercase pointer"><a href="#"></a>article</li>
+        <li class="uppercase pointer"><a href="#"></a>movies</li>
+        <li class="uppercase pointer"><a href="#"></a>tv</li>
+        <li class="uppercase pointer"><a href="#"></a>games</li>
       </ul>
     </div>
     <div class="search-box">
@@ -340,20 +340,25 @@
       <div class="top-section">
         <div class="container flex-x align-center justify-center gap-60">
           <div class="footer-bg col-6">
-            <div class="img-wrapper">
-              <img src="assets/photos/home-page/footer-bg.jpg" />
+            <div class="img-wrapper p-y-10">
+              <img src="assets/photos/search-page/footer-bg.jpeg" />
             </div>
           </div>
           <div class="footer-text col-6 center-text">
             <div class="main-text p-y-60">
               <p class="uppercase">Marvel Insider</p>
-              <p class="m-t-15">Watch, Earn, Redeem!​</p>
+              <p class="m-t-15">Unlock the Universe​</p>
               <p class="m-t-10">
-                Get rewarded for doing what you already do as a fan.​
+                Get instant access to 30,000+ digital comics on the web & mobile
+                devices, exclusive deals, and more member-only benefits with
+                Marvel Unlimited!
               </p>
               <div class="btn btn-red m-t-20">JOIN NOW</div>
             </div>
-            <p>Terms and Conditions Apply.</p>
+            <p>
+              Auto-renewal and other terms apply. See marvel.com/unlimited for
+              additional details.
+            </p>
           </div>
         </div>
       </div>
