add padding to container

--- a/marvel-searchpage.html
+++ b/marvel-searchpage.html
@@ -123,21 +123,23 @@
       </div>
     </div>
     <div class="search-input p-x-25 m-t-40">
-      <div class="input-wrapper relative">
-        <button class="fa-solid fa-magnifying-glass"></button>
-        <input type="search" placeholder="search" class="p-10" />
+      <div class="container-full">
+        <div class="input-wrapper relative">
+          <button class="fa-solid fa-magnifying-glass"></button>
+          <input type="search" placeholder="search" class="p-10" />
+        </div>
+        <ul class="flex-x gap-20 m-t-10 flex-w">
+          <li class="uppercase pointer"><a href="#"></a>all</li>
+          <li class="uppercase pointer"><a href="#"></a>characters</li>
+          <li class="uppercase pointer"><a href="#"></a>groups</li>
+          <li class="uppercase pointer"><a href="#"></a>comics</li>
+          <li class="uppercase pointer"><a href="#"></a>videos</li>
+          <li class="uppercase pointer"><a href="#"></a>article</li>
+          <li class="uppercase pointer"><a href="#"></a>movies</li>
+          <li class="uppercase pointer"><a href="#"></a>tv</li>
+          <li class="uppercase pointer"><a href="#"></a>games</li>
+        </ul>
       </div>
-      <ul class="flex-x gap-20 m-t-10">
-        <li class="uppercase pointer"><a href="#"></a>all</li>
-        <li class="uppercase pointer"><a href="#"></a>characters</li>
-        <li class="uppercase pointer"><a href="#"></a>groups</li>
-        <li class="uppercase pointer"><a href="#"></a>comics</li>
-        <li class="uppercase pointer"><a href="#"></a>videos</li>
-        <li class="uppercase pointer"><a href="#"></a>article</li>
-        <li class="uppercase pointer"><a href="#"></a>movies</li>
-        <li class="uppercase pointer"><a href="#"></a>tv</li>
-        <li class="uppercase pointer"><a href="#"></a>games</li>
-      </ul>
     </div>
     <div class="search-box">
       <div class="container flex-x">
