add banner details for homepage and serachpage

--- a/Marvel-homepage.html
+++ b/Marvel-homepage.html
@@ -196,6 +196,14 @@
         </div>
       </div>
     </div>
+    <div class="container advertisement">
+      <div class="banner center-text m-y-100">
+        <a href="#">
+          <img src="assets/photos/search-page/banner.png" />
+        </a>
+        <p class="uppercase m-t-10">advertisement</p>
+      </div>
+    </div>
     <div class="marvel-unlimited relative z-3 m-t-20">
       <div class="container-full">
         <div class="background relative">
