--- a/marvel-searchpage.html
+++ b/marvel-searchpage.html
@@ -115,9 +115,11 @@
     </div>
 
     <div class="search-hero">
-      <div class="container">
+      <div class="container advertisement">
         <div class="banner center-text">
-          <img src="assets/photos/search-page/banner.png" />
+          <a href="#">
+            <img src="assets/photos/search-page/banner.png" />
+          </a>
           <p class="uppercase m-t-10">advertisement</p>
         </div>
       </div>
