add hiden section to homepage

--- a/Marvel-homepage.html
+++ b/Marvel-homepage.html
@@ -113,11 +113,15 @@
     <div class="ad-nav">
       <div class="container">
         <div class="wrapper flex-x justify-center align-center gap-10">
-          <p>STREAM LOKI SEASON 2 EXCLUSIVELY ON</p>
+          <p>
+            <a href="#"> STREAM LOKI SEASON 2 EXCLUSIVELY ON</a>
+          </p>
           <div class="img-container">
-            <img
-              src="https://cdn.marvel.com/content/1x/disneybtn_asset2x_6.png"
-            />
+            <a href="#">
+              <img
+                src="https://cdn.marvel.com/content/1x/disneybtn_asset2x_6.png"
+              />
+            </a>
           </div>
         </div>
       </div>
@@ -317,6 +321,14 @@
         </div>
       </div>
     </div>
+    <div class="container advertisement">
+      <div class="banner center-text m-y-100">
+        <a href="#">
+          <img src="assets/photos/search-page/banner.png" />
+        </a>
+        <p class="uppercase m-t-10">advertisement</p>
+      </div>
+    </div>
     <div class="latest-hype">
       <div class="container">
         <div class="flex-container flex-x gap-60">
@@ -325,103 +337,131 @@
             <ul>
               <li class="flex-x gap-30">
                 <div class="img-wrapper col-6">
-                  <img
-                    src="assets/photos/home-page/spider-verse_2_cover_card_0.jpeg"
-                  />
+                  <a href="#">
+                    <img
+                      src="assets/photos/home-page/spider-verse_2_cover_card_0.jpeg"
+                    />
+                  </a>
                 </div>
                 <div class="text-wrapper col-6">
                   <span class="i-b m-b-10">COMICS</span>
                   <p>
-                    'Edge of Spider-Verse' #2 Marks the Debut of Spooky-Man and
-                    the Return of Cyborg Spider-Man
+                    <a href="#">
+                      'Edge of Spider-Verse' #2 Marks the Debut of Spooky-Man
+                      and the Return of Cyborg Spider-Man
+                    </a>
                   </p>
                   <span class="i-b m-t-10">1 HOUR AGO</span>
                 </div>
               </li>
               <li class="flex-x gap-30">
                 <div class="img-wrapper col-6">
-                  <img
-                    src="assets/photos/home-page/ghost_spider_1_cover_card.jpeg"
-                  />
+                  <a href="#">
+                    <img
+                      src="assets/photos/home-page/ghost_spider_1_cover_card.jpeg"
+                    />
+                  </a>
                 </div>
                 <div class="text-wrapper col-6">
                   <span class="i-b m-b-10">COMICS</span>
                   <p>
-                    'Edge of Spider-Verse' #2 Marks the Debut of Spooky-Man and
-                    the Return of Cyborg Spider-Man
+                    <a href="#">
+                      'Edge of Spider-Verse' #2 Marks the Debut of Spooky-Man
+                      and the Return of Cyborg Spider-Man
+                    </a>
                   </p>
                   <span class="i-b m-t-10">1 HOUR AGO</span>
                 </div>
               </li>
               <li class="flex-x gap-30">
                 <div class="img-wrapper col-6">
-                  <img
-                    src="assets/photos/home-page/deadpool_1_cover_card.jpg"
-                  />
+                  <a href="#">
+                    <img
+                      src="assets/photos/home-page/deadpool_1_cover_card.jpg"
+                    />
+                  </a>
                 </div>
                 <div class="text-wrapper col-6">
                   <span class="i-b m-b-10">COMICS</span>
                   <p>
-                    'Edge of Spider-Verse' #2 Marks the Debut of Spooky-Man and
-                    the Return of Cyborg Spider-Man
+                    <a href="#">
+                      'Edge of Spider-Verse' #2 Marks the Debut of Spooky-Man
+                      and the Return of Cyborg Spider-Man
+                    </a>
                   </p>
                   <span class="i-b m-t-10">1 HOUR AGO</span>
                 </div>
               </li>
               <li class="flex-x gap-30">
                 <div class="img-wrapper col-6">
-                  <img
-                    src="assets/photos/home-page/weapon_x-men_promo_card.jpg"
-                  />
+                  <a href="#">
+                    <img
+                      src="assets/photos/home-page/weapon_x-men_promo_card.jpg"
+                    />
+                  </a>
                 </div>
                 <div class="text-wrapper col-6">
                   <span class="i-b m-b-10">COMICS</span>
                   <p>
-                    'Edge of Spider-Verse' #2 Marks the Debut of Spooky-Man and
-                    the Return of Cyborg Spider-Man
+                    <a href="#">
+                      'Edge of Spider-Verse' #2 Marks the Debut of Spooky-Man
+                      and the Return of Cyborg Spider-Man
+                    </a>
                   </p>
                   <span class="i-b m-t-10">1 HOUR AGO</span>
                 </div>
               </li>
               <li class="flex-x gap-30">
                 <div class="img-wrapper col-6">
-                  <img
-                    src="assets/photos/home-page/original_x-men_1_cover_card.jpg"
-                  />
+                  <a href="#">
+                    <img
+                      src="assets/photos/home-page/original_x-men_1_cover_card.jpg"
+                    />
+                  </a>
                 </div>
                 <div class="text-wrapper col-6">
                   <span class="i-b m-b-10">COMICS</span>
                   <p>
-                    'Edge of Spider-Verse' #2 Marks the Debut of Spooky-Man and
-                    the Return of Cyborg Spider-Man
+                    <a href="#">
+                      'Edge of Spider-Verse' #2 Marks the Debut of Spooky-Man
+                      and the Return of Cyborg Spider-Man
+                    </a>
                   </p>
                   <span class="i-b m-t-10">1 HOUR AGO</span>
                 </div>
               </li>
               <li class="flex-x gap-30">
                 <div class="img-wrapper col-6">
-                  <img
-                    src="assets/photos/home-page/xmunvc2021118001_copy.jpg"
-                  />
+                  <a href="#">
+                    <img
+                      src="assets/photos/home-page/xmunvc2021118001_copy.jpg"
+                    />
+                  </a>
                 </div>
                 <div class="text-wrapper col-6">
                   <span class="i-b m-b-10">COMICS</span>
                   <p>
-                    'Edge of Spider-Verse' #2 Marks the Debut of Spooky-Man and
-                    the Return of Cyborg Spider-Man
+                    <a href="#">
+                      'Edge of Spider-Verse' #2 Marks the Debut of Spooky-Man
+                      and the Return of Cyborg Spider-Man
+                    </a>
                   </p>
                   <span class="i-b m-t-10">1 HOUR AGO</span>
                 </div>
               </li>
               <li class="flex-x gap-30">
                 <div class="img-wrapper col-6">
-                  <img src="assets/photos/home-page/edgesv2024001_card.jpg" />
+                  <a href="#">
+                    <img src="assets/photos/home-page/edgesv2024001_card.jpg" />
+                  </a>
                 </div>
                 <div class="text-wrapper col-6">
                   <span class="i-b m-b-10">COMICS</span>
                   <p>
-                    'Edge of Spider-Verse' #2 Marks the Debut of Spooky-Man and
-                    the Return of Cyborg Spider-Man
+                    <a href="#">
+                      'Edge of Spider-Verse' #2 Marks the Debut of Spooky-Man
+                      and the Return of Cyborg Spider-Man
+                    </a>
                   </p>
                   <span class="i-b m-t-10">1 HOUR AGO</span>
                 </div>
@@ -460,7 +500,11 @@
                   </div>
                   <div class="text-wrapper col-6 m-b-10">
                     <span class="i-b m-b-5">COMICS</span>
-                    <p>December 13's New Marvel Comics: The Full List</p>
+                    <p>
+                      <a href="#">
+                        December 13's New Marvel Comics: The Full List</a
+                      >
+                    </p>
                   </div>
                 </li>
                 <li class="flex-x gap-30">
@@ -472,7 +516,11 @@
                   </div>
                   <div class="text-wrapper col-6 m-b-10">
                     <span class="i-b m-b-5">COMICS</span>
-                    <p>December 13's New Marvel Comics: The Full List</p>
+                    <p>
+                      <a href="#">
+                        December 13's New Marvel Comics: The Full List</a
+                      >
+                    </p>
                   </div>
                 </li>
                 <li class="flex-x gap-30">
@@ -484,7 +532,11 @@
                   </div>
                   <div class="text-wrapper col-6 m-b-10">
                     <span class="i-b m-b-5">COMICS</span>
-                    <p>December 13's New Marvel Comics: The Full List</p>
+                    <p>
+                      <a href="#">
+                        December 13's New Marvel Comics: The Full List</a
+                      >
+                    </p>
                   </div>
                 </li>
                 <li class="flex-x gap-30">
@@ -496,7 +548,11 @@
                   </div>
                   <div class="text-wrapper col-6 m-b-10">
                     <span class="i-b m-b-5">COMICS</span>
-                    <p>December 13's New Marvel Comics: The Full List</p>
+                    <p>
+                      <a href="#">
+                        December 13's New Marvel Comics: The Full List</a
+                      >
+                    </p>
                   </div>
                 </li>
                 <li class="flex-x gap-30">
@@ -508,7 +564,11 @@
                   </div>
                   <div class="text-wrapper col-6 m-b-10">
                     <span class="i-b m-b-5">COMICS</span>
-                    <p>December 13's New Marvel Comics: The Full List</p>
+                    <p>
+                      <a href="#">
+                        December 13's New Marvel Comics: The Full List</a
+                      >
+                    </p>
                   </div>
                 </li>
               </ul>
@@ -530,7 +590,78 @@
         </div>
       </div>
     </div>
-    <div class="hidden-details"></div>
+    <div class="hidden-details m-t-60">
+      <div class="container">
+        <div class="gallery-wrapper flex-x align-center gap-30">
+          <div class="big-poster col-8">
+            <div class="img-wrapper relative">
+              <img src="assets/photos/home-page/loki-bg.jpg" />
+              <div class="play-icon">
+                <i class="fa-solid fa-play"></i>
+              </div>
+            </div>
+          </div>
+          <div class="small-poster col-3">
+            <ul class="flex-y align-start gap-10">
+              <li class="focused">
+                <div class="img-wrapper relative">
+                  <img src="assets/photos/home-page/loki-bg.jpg" />
+                  <div class="play-icon">
+                    <i class="fa-solid fa-play"></i>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="img-wrapper relative">
+                  <img src="assets/photos/home-page/h1.jpg" />
+                  <div class="play-icon">
+                    <i class="fa-solid fa-play"></i>
+                  </div>
+                  <div class="text-wrapper">
+                    <p>
+                      Spectacular Spider-Man | Official Trailer | Marvel comics
+                    </p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="img-wrapper relative">
+                  <img src="assets/photos/home-page/h2.jpg" />
+                  <div class="play-icon">
+                    <i class="fa-solid fa-play"></i>
+                  </div>
+                  <div class="text-wrapper">
+                    <p>
+                      Spectacular Spider-Man | Official Trailer | Marvel comics
+                    </p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="img-wrapper relative">
+                  <img src="assets/photos/home-page/h3.jpg" />
+                  <div class="play-icon">
+                    <i class="fa-solid fa-play"></i>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div class="v-line col-1"></div>
+        </div>
+        <div class="description col-8 m-t-20">
+          <span>TRAILERS & EXTRAS </span>
+          <div>Hidden Details in Loki's Costumes! | Behind the Scenes</div>
+          <p>
+            Within the TVA and throughout time, Tom Hiddleston's costumes
+            represent Loki's journey throughout Season 2 of Marvel Studios'
+            Loki. Tom and Costume Designer Christine Wada worked together to
+            visually tell the tale of Loki's struggle to save the TVA.
+          </p>
+        </div>
+      </div>
+    </div>
+
     <div class="new-comics m-t-100">
       <div class="container-full">
         <div class="background relative">
